--- a/src/ui/MainMenu/MainMenu.css
+++ b/src/ui/MainMenu/MainMenu.css
@@ -81,3 +81,15 @@ main section form button {
   width: 100%;
   background-color: #dadada;
 }
+
+
+
+
+/*  */
+.overlay{
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100svh;
+  background: rgb(0, 0, 0, 0.8);
+}
